# kxr_robot_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch
model/khrsugihara/: .gitignore  freed_docking_pipe.urdf  khrsugihara-birotor.urdf  khrsugihara-tri-anti-slip-joint.urdf  khrsugihara-tri-free.urdf  khrsugihara-tri-tilt.urdf  khrsugihara-tri-vertical.urdf  khrsugihara.urdf  khrsugihara.xacro  khrsugihara.yaml  khrsugihara_yaw.urdf  khrsugihara_yaw.xacro  khrsugihara_yaw.yaml  khrsugihara_yaw_lock_joint.urdf  kxr_flight_unit_tri.urdf  make.sh
model/khrsugihara/scripts/: transformation.py
model/khrsugihara/tmp/: HEAD_LINK0_mesh.stl  LARM_LINK0_mesh.stl  LARM_LINK1_mesh.stl  LARM_LINK2_mesh.stl  LARM_LINK3_mesh.stl  LARM_LINK4_mesh.stl  LARM_LINK5_mesh.stl  LLEG_LINK2_mesh.stl  LLEG_LINK3_mesh.stl  LLEG_LINK4_mesh.stl  MJDATA.TXT  MJMODEL.TXT  MUJOCO_LOG.TXT  RARM_LINK2_mesh.stl  RARM_LINK3_mesh.stl  RLEG_LINK1_mesh.stl  cam_hand_v6.STL  combining_pipe_mount_khr_parallel.STL  convert.py  filter.mlx  head_link1.STL  khrsugihara_yaw_lock_joint.urdf  khrsugihara_yaw_lock_joint.xml  khrsugihara_yaw_lock_joint2.xml  lock_joint_combining_pipe_mount_khr_parallel.STL
model/kxr_flight_unit_tri/: kxr_flight_unit_tri.urdf  kxr_flight_unit_tri.xacro
model/mesh/real/: combining_pipe_mount_khr_backpack.STL  head_link2.STL  lleg_foot_force.stl  lock_joint.STL  rleg_foot_force.stl  servo_wheel_60.STL  thrust_link.STL  wheel.stl
model/mesh/simple/: LLEG_LINK0_mesh.dae  LLEG_LINK0_mesh.stl  LLEG_LINK1_mesh.stl  LLEG_LINK2_mesh.dae  (+17 more)
rviz/: urdf.rviz
(+27 files in other folders)
