<?xml version="1.0"?>
<package format="2">
  <name>kxr_robot_description</name>
  <version>0.0.0</version>
  <description>The kxr_robot_description package</description>

  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">sugihara</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
